--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div {
 
 .maindiv {
 	margin: auto;
-	width: 75%;
+	width: 50%;
 	background-color: #ccddff;
 	padding: 10px;
 }
@@ -62,10 +62,14 @@ table {
 }
 
 img{
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 650px;
+  height:450px;
 }
 
 .tittle{
